--- a/setup/index.html
+++ b/setup/index.html
@@ -18,6 +18,7 @@
         <style type="text/css">
           body {
             padding: 30px ;
+            overflow-x: hidden;
           }
           .loader,
           .loader:after {
@@ -61,25 +62,48 @@
             }
           }
 
-          #load, #output {
+          #load, #output, #error {
             display: none;
+          }
+          #status {
+            text-align: center;
           }
         </style>
 
     </head>
     <body>
 
-        <div class="loader" id="load">Loading...</div>
+        <div id="load">
+          <div class="loader">Loading...</div>
+          <ul class="list-group" id="status">
+          </ul>
+        </div>
+
+
+
+        <div id="error">
+
+          <div class="alert alert-danger" role="alert">
+            <strong>Something went wrong!</strong> <span id="error-out"></span>
+          </div>
+
+        </div>
 
         <form id="provision">
 
+          <div id="warning">
+            <div class="alert alert-info" role="alert">
+              <strong>Don't have an account?</strong> <a href="https://admin.pubnub.com/#/register">Sign up for PubNub</a>.
+            </div>
+          </div>
+
           <div class="form-group">
-            <label for="email">Email address</label>
+            <label for="email">PubNub Email:</label>
             <input type="email" class="form-control" id="email" placeholder="Email" value="ian+pubnubgarbage@meetjennings.com">
           </div>
 
           <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">PubNub Password:</label>
             <input type="password" class="form-control" id="password" placeholder="Password" value="Mrgarbageis#1!">
           </div>
 
@@ -106,16 +130,34 @@
             $('#load').show();
             Provision($('#email').val(), $('#password').val(), function(err, data) {
 
+              if(err) {
+
+                $('#load').hide();
+                $('#provision').show();
+
+                console.log(err)
+
+                $('#error-out').html(err);
+                $('#error').show();
+              } else {
+
               $('#load').hide();
 
-              let output = "";
-              output += "ChatEngine = ChatEngineCore.create({\n";
-              output += "    publishKey: 'pub-c-c6303bb2-8bf8-4417-aac7-e83b52237ea6',\n";
-              output += "    subscribeKey: 'sub-c-67db0e7a-50be-11e7-bf50-02ee2ddab7fe'\n";
-              output += "});\n";
+                let output = "";
+                output += "// Make sure to import ChatEngine first!\n";
+                output += "ChatEngine = ChatEngineCore.create({\n";
+                output += "    publishKey: 'pub-c-c6303bb2-8bf8-4417-aac7-e83b52237ea6',\n";
+                output += "    subscribeKey: 'sub-c-67db0e7a-50be-11e7-bf50-02ee2ddab7fe'\n";
+                output += "});\n";
 
-              $('#code').text(output);
-              $('#output').show();
+                $('#code').text(output);
+                $('#output').show();
+
+              }
+
+            }, function(statusText){
+
+              $('#status').append($('<li class="list-group-item">' + statusText + '</li>'));
 
             });
 
